Payment schema and model
